--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -15,7 +15,7 @@
     margin: 1rem 0;
 }
 
-.portfolio li .title{
+.portfolio li h3{
     display: flex;
     flex-direction: row;
     align-items: center;
